fixed header covering page

--- a/2.0/login.css
+++ b/2.0/login.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
 }
 body {
-    padding-top:100px;
-    height: 100vh;
+    padding-top: 100px;
+    /*height: 100vh;*/
     display: flex;
     background: url(./trinitycollegedublin.jpeg);
     background-size:  cover;
@@ -21,6 +21,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    height: 80px;
     padding: 20px 100px;
     display: flex;
     justify-content: space-between;
@@ -28,7 +29,19 @@ header {
     z-index: 99;
     background-color: rgb(7, 70, 33);
     margin-bottom:100px;
-  }
+}
+
+.container{
+    padding-top: 100px;
+    height: 100vh;
+    display: flex;
+    background-size:  cover;
+    background-position: center;
+    background-attachment: fixed;
+    align-items: center;
+    justify-content: center;
+}
+
 .title {
     color: blanchedalmond;
 }
@@ -188,8 +201,8 @@ header {
   }
 
   .note {
-    position: absolute;
-    right: 1;
+    position: fixed;
     bottom: 0;
+    left: 0;
     color:blanchedalmond ;
   }
